--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.launchpad.testing-war</artifactId>
-    <packaging>war</packaging>
+    <packaging>slingstart</packaging>
     <version>7-SNAPSHOT</version>
 
     <name>Apache Sling Launchpad Testing WAR version</name>
@@ -148,21 +148,9 @@
              </plugin>
             <plugin>
                 <groupId>org.apache.sling</groupId>
-                <artifactId>maven-launchpad-plugin</artifactId>
+                <artifactId>slingstart-maven-plugin</artifactId>
+                <version>1.0.5-SNAPSHOT</version>
                 <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>prepare-package</id>
-                        <goals>
-                            <goal>prepare-package</goal>
-                        </goals>
-                    </execution>
-                </executions>    
-                <configuration>
-                    <defaultBundleList>
-                        <version>${project.version}</version>
-                    </defaultBundleList>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -175,33 +163,7 @@
                 </configuration>
             </plugin>
             
-            <!--
-              Include sling-app launcher classes and resources, but no Sling
-              bundles (we want to specify our own versions)
-            -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <packagingExcludes>WEB-INF/classes/META-INF/*</packagingExcludes>
-                    <webResources>
-                        <!-- the configuration resources -->
-                        <resource>
-                            <directory>
-                                ${project.build.directory}/launchpad-bundles
-                            </directory>
-                            <targetPath>WEB-INF</targetPath>
-                        </resource>
-                        <!-- Legal stuff -->
-                        <resource>
-                            <directory>${project.build.outputDirectory}/META-INF</directory>
-                            <targetPath>META-INF</targetPath>
-                        </resource>
-                    </webResources>
-                </configuration>
-            </plugin>
-
-            <plugin>
+           <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
@@ -425,6 +387,14 @@
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.annotations</artifactId>
         </dependency>  
+
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.launchpad</artifactId>
+            <version>8-SNAPSHOT</version>
+            <type>slingfeature</type>
+            <classifier>slingfeature</classifier>
+        </dependency>
         <dependency>
              <groupId>org.apache.sling</groupId>
              <artifactId>org.apache.sling.launchpad.integration-tests</artifactId>
@@ -433,23 +403,13 @@
         </dependency>
 
          <!-- The test services bundles -->
-         <dependency>
-              <groupId>org.apache.sling</groupId>
-              <artifactId>org.apache.sling.launchpad.test-bundles</artifactId>
-              <version>0.0.1-SNAPSHOT</version>
-              <type>partialbundlelist</type>
-         </dependency>
-
-        <!--  The basic Sling WebApp -->
         <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.launchpad.base</artifactId>
-            <version>2.5.1-SNAPSHOT</version>
-            <classifier>webapp</classifier>
-            <type>war</type>
-            <scope>runtime</scope>
+             <groupId>org.apache.sling</groupId>
+             <artifactId>org.apache.sling.launchpad.test-bundles</artifactId>
+             <version>0.0.1-SNAPSHOT</version>
+             <type>slingfeature</type>
         </dependency>
-        
+
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
