--- a/contrib/scripting/sightly/testing/pom.xml
+++ b/contrib/scripting/sightly/testing/pom.xml
@@ -28,12 +28,13 @@
     </parent>
 
     <artifactId>org.apache.sling.scripting.sightly.testing</artifactId>
-    <packaging>jar</packaging>
+    <packaging>slingstart</packaging>
     <version>1.0.5-SNAPSHOT</version>
 
     <name>Apache Sling Scripting Sightly Integration Tests</name>
     <description>This project runs the integration tests for validating the Apache Sling Scripting Sightly implementation
-        against the Adobe Sightly TCK.</description>
+        against the Adobe Sightly TCK.
+    </description>
 
     <scm>
         <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/contrib/scripting/sightly/testing</connection>
@@ -42,23 +43,23 @@
     </scm>
 
     <properties>
-        <!-- HTTP port to use when running mvn launchpad:run -->
-        <run.http.port>8888</run.http.port>
+        <!-- HTTP port to use when running mvn slingstart:start -Dlaunchpad.keep.running=true -->
+        <http.port>8080</http.port>
 
         <!-- Timeout when checking for Sling readyness before starting tests -->
         <HttpTestBase.readyTimeoutSeconds>62</HttpTestBase.readyTimeoutSeconds>
 
         <!-- path suffix for HTTP access to Sling -->
-        <http.base.path />
+        <http.base.path/>
 
         <!-- path suffix for WebDAV access to the repository -->
-        <webdav.workspace.path />
+        <webdav.workspace.path/>
 
         <!-- hostname for integration tests -->
         <test.host>localhost</test.host>
 
         <!-- optionally exclude some integration tests  -->
-        <failsafe.exclude />
+        <failsafe.exclude/>
 
         <!--
             Set this to true to stop mvn once the integration test Jetty instance is
@@ -66,8 +67,8 @@
         -->
         <integration.test.wait>false</integration.test.wait>
 
-        <slf4j.version>1.5.11</slf4j.version>
-        <logback.version>0.9.20</logback.version>
+        <slf4j.version>1.7.7</slf4j.version>
+        <logback.version>1.1.2</logback.version>
     </properties>
 
     <build>
@@ -142,130 +143,31 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.sling</groupId>
-                <artifactId>maven-launchpad-plugin</artifactId>
-                <version>2.3.0</version>
+                <artifactId>slingstart-maven-plugin</artifactId>
+                <version>1.0.5-SNAPSHOT</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
-                        <id>prepare-test-webapp</id>
-                        <goals>
-                            <goal>prepare-test-webapp</goal>
-                        </goals>
-                    </execution>
-                    <execution>
                         <id>start-container</id>
-                        <phase>pre-integration-test</phase>
                         <goals>
                             <goal>start</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop-container</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
                             <goal>stop</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <slingHome>${project.build.directory}/sling</slingHome>
-                    <httpPort>${http.port}</httpPort>
+                    <servers>
+                        <server>
+                            <port>${http.port}</port>
+                            <controlPort>${sling.control.port}</controlPort>
+                            <runmode>jackrabbit</runmode>
+                            <contextPath>${http.base.path}</contextPath>
+                        </server>
+                    </servers>
+                    <!-- TODO
                     <controlHost>${test.host}</controlHost>
-                    <controlPort>${sling.control.port}</controlPort>
-                    <defaultBundleList>
-                        <version>7</version>
-                    </defaultBundleList>
-                    <jarWebSupport>
-                        <bundles>
-                          <bundle>
-                                <groupId>org.apache.felix</groupId>
-                                <artifactId>org.apache.felix.http.api</artifactId>
-                                <version>2.3.2</version>
-                                <startLevel>5</startLevel>
-                            </bundle>
-                            <bundle>
-                                <groupId>org.apache.felix</groupId>
-                                <artifactId>org.apache.felix.http.servlet-api</artifactId>
-                                <version>1.0.1</version>
-                                <startLevel>5</startLevel>
-                            </bundle>
-                            <bundle>
-                                <groupId>org.apache.felix</groupId>
-                                <artifactId>org.apache.felix.http.jetty</artifactId>
-                                <version>2.3.2</version>
-                                <startLevel>5</startLevel>
-                            </bundle>
-                        </bundles>
-                    </jarWebSupport>
-                    <additionalBundles>
-                        <bundle>
-                            <groupId>org.apache.sling</groupId>
-                            <artifactId>org.apache.sling.launchpad.installer</artifactId>
-                            <version>1.2.2</version>
-                        </bundle>
-                        <bundle>
-                            <groupId>org.apache.sling</groupId>
-                            <artifactId>org.apache.sling.jcr.compiler</artifactId>
-                            <version>2.1.0</version>
-                            <startLevel>20</startLevel>
-                        </bundle>
-                        <bundle>
-                            <groupId>javax.mail</groupId>
-                            <artifactId>mail</artifactId>
-                            <version>1.4.7</version>
-                            <startLevel>20</startLevel>
-                        </bundle>
-                        <bundle>
-                            <groupId>org.apache.sling</groupId>
-                            <artifactId>org.apache.sling.i18n</artifactId>
-                            <version>2.2.10</version>
-                            <startLevel>20</startLevel>
-                        </bundle>
-                        <bundle>
-                            <groupId>org.apache.sling</groupId>
-                            <artifactId>org.apache.sling.xss</artifactId>
-                            <version>1.0.2</version>
-                            <startLevel>20</startLevel>
-                        </bundle>
-                        <bundle>
-                            <groupId>org.apache.sling</groupId>
-                            <artifactId>org.apache.sling.scripting.sightly</artifactId>
-                            <version>1.0.3-SNAPSHOT</version>
-                            <startLevel>20</startLevel>
-                        </bundle>
-                        <bundle>
-                            <groupId>org.apache.sling</groupId>
-                            <artifactId>org.apache.sling.scripting.sightly.js.provider</artifactId>
-                            <version>1.0.5-SNAPSHOT</version>
-                            <startLevel>20</startLevel>
-                        </bundle>
-                        <bundle>
-                            <groupId>org.apache.sling</groupId>
-                            <artifactId>org.apache.sling.scripting.sightly.testing-content</artifactId>
-                            <version>1.0.5-SNAPSHOT</version>
-                            <startLevel>20</startLevel>
-                        </bundle>
-                        <bundle>
-                            <groupId>org.apache.sling</groupId>
-                            <artifactId>org.apache.sling.scripting.sightly.repl</artifactId>
-                            <version>1.0.0</version>
-                            <startLevel>20</startLevel>
-                        </bundle>
-                    </additionalBundles>
+                    -->
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.sling</groupId>
-                        <artifactId>org.apache.sling.launchpad.base</artifactId>
-                        <version>4.6.1-2.5.8</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.sling</groupId>
-                        <artifactId>org.apache.sling.launchpad.base</artifactId>
-                        <version>4.6.1-2.5.8</version>
-                        <classifier>app</classifier>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -291,37 +193,37 @@
 
     <dependencies>
 
-      <!-- The integration tests -->
+        <!-- The integration tests -->
         <dependency>
             <groupId>io.sightly</groupId>
             <artifactId>io.sightly.tck</artifactId>
             <version>1.1.2</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
-      <!--  The basic Sling WebApp -->
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.launchpad.base</artifactId>
-            <version>4.6.1-2.5.8</version>
-            <classifier>app</classifier>
-            <scope>test</scope>
-        </dependency>
-
+        <!-- Dependencies for the Test Build and Run -->
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.testing</artifactId>
-            <version>2.0.16</version>
+            <version>2.0.18</version>
             <exclusions>
                 <exclusion>
                     <groupId>junit</groupId>
                     <artifactId>junit-dep</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                </exclusion>
             </exclusions>
             <scope>test</scope>
         </dependency>
-
-        <!-- Dependencies for the Test Build and Run -->
         <dependency>
             <groupId>javax.jcr</groupId>
             <artifactId>jcr</artifactId>
@@ -347,10 +249,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.11</version>
-          <scope>test</scope>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
