--- a/pom.xml
+++ b/pom.xml
@@ -278,7 +278,7 @@
     <dependency>
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.testing.tools</artifactId>
-      <version>1.0.9-SNAPSHOT</version>
+      <version>1.0.10</version>
     </dependency>
     <dependency>
       <groupId>org.apache.sling</groupId>
